2012-07-25  Aleksej Saushev <asau@inbox.ru>

	* hyper/htadd.c: Include <string.h>
	* hyper/lex.c: Likewise.

2012-06-10  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/io.boot (%SourceLine): New.
	(%LoadUnit): Likewise.
	(readLoadUnitSource): Likewise.
	(%Reader):  Remove input stream field.  Include load unit and next
	lines fields.  Adjust users.

2012-06-10  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/newaux.lisp (MAKEOP): Move to spad-parser.boot.
	Remove file.
	* interp/Makefile.in: Adjust.

2012-06-10  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/newaux.lisp: Move Led property setting to spad-parser.boot.

2012-06-10  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/newaux.lisp: Move Nud property setting to spad-parser.boot.
	Import sys-utility.
	* interp/Makefile.in: Adjust.

2012-06-09  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/spad-parser.boot: Fix thinkos from previous commit.

2012-06-09  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/preparse.lisp: Remove.
	* interp/spad-parser.boot: Do not include.  Import lexing instead.
	* interp/Makefile.in: Adjust.

2012-06-09  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/io.boot (%Reader): Add idx field.
	* interp/preparse.lisp ($INDEX): Remove.  Adjust users.

2012-06-06  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/lexing.boot: Move %Line to io.boot.
	* interp/debug.lisp (SPAD_LONG_ERROR): Take a reader parameter.  Tidy.

2012-06-06  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/io.boot (readePendingLines): Rename from readerLines.
	Adjust callers.

2012-06-05  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/io.boot (readerDeferLine): New.
	* interp/preparse.lisp (preparse1): Use it.
	* interp/spad-parser.boot (preparse): Likewise.

2012-06-04  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/spad-parser.boot (preparse): Tidy.

2012-06-04  Gabriel Dos Reis  <gdr@cs.tamu.edu>

	* interp/spad-parser.boot (findCommentBlock): Lose last
	parameter.  Adjust callers.
